--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <div class="rainbow">
 
-        <video src="coffin.mp4" autoplay controls></video>
+        <video src="coffin2.mp4" autoplay controls></video>
 
     </div>
     
 </body>
-</html>
+</html> 
+
+<!-- edit -->
